# trade_execution_system

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  entrypoint.sh  pyproject.toml
tests/: conftest.py  test.db  test_trades.py
trading_execution_system/: __main__.py  main.py
trading_execution_system/api/v1/routes/: trades.py  users.py
trading_execution_system/core/: config.py  dependencies.py  rbac.py
trading_execution_system/db/: settings.py
trading_execution_system/models/: enums.py  trade.py  user.py
trading_execution_system/schemas/: trade.py
trading_execution_system/services/: state_transitions.py  trade.py
trading_execution_system/utils/: diff.py
